@@ -22,7 +22,6 @@ import com.google.gson.JsonElement;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -39,10 +38,13 @@ import org.springframework.stereotype.Component;
 @Component
 public final class ProductMixDataValidator {
 
+    public static final String RESTRICTED_PRODUCTS = "restrictedProducts";
     /**
      * The parameters supported for this command.
      */
-    private final Set<String> supportedParameters = new HashSet<>(Arrays.asList("restrictedProducts"));
+    private static final Set<String> SUPPORTED_PARAMETERS = new HashSet<>(List.of(RESTRICTED_PRODUCTS));
+    public static final String PRODUCTMIX = "productmix";
+    public static final String RESTRICTED_PRODUCT = "restrictedProduct";
 
     private final FromJsonHelper fromApiJsonHelper;
 
@@ -57,15 +59,15 @@ public final class ProductMixDataValidator {
         }
 
         final Type typeOfMap = new TypeToken<Map<String, Object>>() {}.getType();
-        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, this.supportedParameters);
+        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, SUPPORTED_PARAMETERS);
 
         final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
-        final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("productmix");
+        final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource(PRODUCTMIX);
 
         final JsonElement element = this.fromApiJsonHelper.parse(json);
 
-        final String[] restrictedProducts = this.fromApiJsonHelper.extractArrayNamed("restrictedProducts", element);
-        baseDataValidator.reset().parameter("restrictedProducts").value(restrictedProducts).arrayNotEmpty();
+        final String[] restrictedProducts = this.fromApiJsonHelper.extractArrayNamed(RESTRICTED_PRODUCTS, element);
+        baseDataValidator.reset().parameter(RESTRICTED_PRODUCTS).value(restrictedProducts).arrayNotEmpty();
         if (restrictedProducts != null) {
             validateRestrictedProducts(restrictedProducts, baseDataValidator);
         }
@@ -75,7 +77,7 @@ public final class ProductMixDataValidator {
 
     private void validateRestrictedProducts(final String[] restrictedProducts, final DataValidatorBuilder baseDataValidator) {
         for (final String restrictedId : restrictedProducts) {
-            baseDataValidator.reset().parameter("restrictedProduct").value(restrictedId).notBlank().longGreaterThanZero();
+            baseDataValidator.reset().parameter(RESTRICTED_PRODUCT).value(restrictedId).notBlank().longGreaterThanZero();
         }
     }
 
@@ -93,13 +95,13 @@ public final class ProductMixDataValidator {
         }
 
         final Type typeOfMap = new TypeToken<Map<String, Object>>() {}.getType();
-        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, this.supportedParameters);
+        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, SUPPORTED_PARAMETERS);
 
         final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
-        final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("productmix");
+        final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource(PRODUCTMIX);
 
         final JsonElement element = this.fromApiJsonHelper.parse(json);
-        final String[] restrictedProducts = this.fromApiJsonHelper.extractArrayNamed("restrictedProducts", element);
+        final String[] restrictedProducts = this.fromApiJsonHelper.extractArrayNamed(RESTRICTED_PRODUCTS, element);
         validateRestrictedProducts(restrictedProducts, baseDataValidator);
 
         throwExceptionIfValidationWarningsExist(dataValidationErrors);
